[workspace]
members = ["crates/postgen-server"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.97"
axum = "0.7.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.4", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.17", features = ["time"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
