[package]
name = "postjen-agent"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
postjen-core = { path = "../postjen-core" }
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
