[package]
name = "postjen-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
postjen-core = { path = "../postjen-core" }
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
hex = "0.4"
rand = "0.8"
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
